--- a/Login-Form-Test/src/index.css
+++ b/Login-Form-Test/src/index.css
@@ -1,58 +1,47 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-image: url(assets/for-backgorund.jpg.jpg) ;
+  background-size: cover;
+  
+}
+
+.log-container{
+margin: auto;
+display: flex;
+justify-content: center;
+align-items: center;
+border: 2px gray ;
+width: 500px;
+height: 500px;
+border-radius: 1.3rem;
+background-color: rgba(161, 161, 161, 0.74);
+box-shadow:10px 5px 3px grey;
+font-size: 30px;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+.inputs{
+width:400px;
+height: 50px;
+font-size: 30px;
+}
+.feedback{
+font-size: 20px;  
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  text-align: center;
+  font-size: 50px;
+  margin: auto;
+  border: none;
+  border-radius: 1.3rem;
+  background-color: rgba(0, 0, 0, 0.164);
+  margin: auto;
+  width: 25%;
+  color: #ffffff;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
