--- a/Login-Form-Test/src/index.css
+++ b/Login-Form-Test/src/index.css
@@ -27,12 +27,13 @@ height: 50px;
 font-size: 30px;
 }
 .feedback{
-font-size: 20px;  
+font-size: 20px;
+background-color: rgba(0, 0, 0, 0.39);  
 }
 
 h1 {
   text-align: center;
-  font-size: 50px;
+  font-size: 65px;
   font-family: "Bodoni Moda SC", serif;
   margin: auto;
   border: none;
@@ -41,6 +42,19 @@ h1 {
   margin: auto;
   width: 25%;
   color: #c4c4c4;
+}
+
+.success-log{
+ backdrop-filter: blur(15px);
+ background-color: rgba(255, 208, 0, 0.274);
+ border: 2px rgba(126, 255, 6, 0.37);
+ border-radius: 1.4rem; 
+ width: 25%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ font-size: 60px;
+ text-align: center;
 }
 
 
